--- a/style.css
+++ b/style.css
@@ -18,9 +18,44 @@
     }
 }
 
-.nav-item a{
+.nav-item a, .footer-item a{
     text-decoration: none;
     color: black;
+}
+
+.modal{
+    border: 1px solid #000;
+    height: 200px;
+    position: relative;
+}
+
+.modal-item{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.modal-item-red{
+    background-color: red;
+}
+.modal-item-blue{
+    background-color: blue;
+}
+.modal-item-green{
+    background-color: green;
+}
+
+.modal-btn{
+    position: absolute;
+    top: 45%;
+    &:hover{
+        background-color: gray;
+        cursor: pointer;
+    }
+}
+
+.modal-right{
+    right: 0;
 }
 
 
