--- a/style.css
+++ b/style.css
@@ -23,29 +23,29 @@
     color: black;
 }
 
-.modal{
+.carousel{
     border: 1px solid #000;
     height: 200px;
     position: relative;
 }
 
-.modal-item{
+.carousel-item{
     position: absolute;
     width: 100%;
     height: 100%;
 }
 
-.modal-item-red{
+.carousel-item-red{
     background-color: red;
 }
-.modal-item-blue{
+.carousel-item-blue{
     background-color: blue;
 }
-.modal-item-green{
+.carousel-item-green{
     background-color: green;
 }
 
-.modal-btn{
+.carousel-btn{
     position: absolute;
     top: 45%;
     &:hover{
@@ -54,7 +54,7 @@
     }
 }
 
-.modal-right{
+.carousel-right{
     right: 0;
 }
 
