--- a/style.css
+++ b/style.css
@@ -58,6 +58,13 @@
     right: 0;
 }
 
+.shape1{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    background-color: red;
+}
+
 
 .footer-list{
     list-style-type: none;
