--- a/style.css
+++ b/style.css
@@ -92,6 +92,13 @@
     z-index: -;
 }
 
+.shape4{
+    height: 200px;
+    background-color: red;
+    aspect-ratio: 1/cos(30deg);
+    clip-path: polygon(50% -50%, 100% 50%, 50% 150%, 0 50%);
+}
+
 
 .footer-list{
     list-style-type: none;
