--- a/style.css
+++ b/style.css
@@ -99,6 +99,13 @@
     clip-path: polygon(50% -50%, 100% 50%, 50% 150%, 0 50%);
 }
 
+.shape5{
+    width: 200px;
+    aspect-ratio: 10/6;
+    border-radius: 50%;
+    background-color: lime;
+}
+
 
 .footer-list{
     list-style-type: none;
