added another shape

--- a/style.css
+++ b/style.css
@@ -105,6 +105,11 @@
     border-radius: 50%;
     background-color: lime;
 }
+.shape6{
+    height: 200px;
+    background-color: black;
+    
+}
 
 
 .footer-list{
