--- a/style.css
+++ b/style.css
@@ -110,6 +110,24 @@
     background-color: black;
     
 }
+.shape7{
+    height: 200px;
+    background-color: gray;
+    aspect-ratio: 1/cos(30deg);
+    clip-path: polygon(50% -50%, 100% 50%, 50% 150%, 0 50%);
+    position: relative;
+}
+
+.hole{
+    height: 100px;
+    background-color: white;
+    aspect-ratio: 1/cos(30deg);
+    clip-path: polygon(50% -50%, 100% 50%, 50% 150%, 0 50%);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
 
 
 .footer-list{
