--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@
     aspect-ratio: 1/cos(30deg);
     clip-path: polygon(50% -50%, 100% 50%, 50% 150%, 0 50%);
     position: relative;
+    border: 1px solid #000;
 }
 
 .hole{
